[tool.poetry]
name = "chainhook"
version = "0.1.0"
description = ""
authors = ["Mahdi <mahdighadiriafzal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.119.1"}
django = "5.2"
djangorestframework = "^3.16.1"
sqlalchemy = "^2.0.44"
redis = "^7.0.0"
pika = "^1.3.2"
pydantic-settings = "^2.11.0"
psycopg2-binary = "^2.9.11"
web3 = "6.0.0"
setuptools = "^80.9.0"
aio-pika = "9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
